--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -618,7 +618,7 @@
                 <p>Scan to access Student Portal</p>
                 <img src="${qrImg.src}" alt="QR Code" id="qrImage">
                 <p style="margin-top:20px; color:#999; font-size:0.9em;">Student Portal: <a href="{{ student_portal_url }}">{{ student_portal_url }}</a></p>
-                <script>
+                <scr`+`ipt>
                   window.onload = function() {
                     var img = document.getElementById('qrImage');
                     if (img.complete) {
@@ -629,7 +629,7 @@
                       };
                     }
                   };
-                </script>
+                </scr`+`ipt>
               </body>
             </html>
           `);
