--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -99,18 +99,21 @@
           <div class="form-group">
             <label>Select Department:</label>
             <select name="department" id="deptSelect" required>
-             <option value="">--Select Department--</option>
-<option value="CSE">CSE</option>
-<option value="ECE">ECE</option>
-<option value="EEE">EEE</option>
-<option value="IT">IT</option>
-<option value="ME">ME</option>
-<option value="CE">CE</option>
-<option value="AIML">AIML</option>
-<option value="CSBS">CSBS</option>
-<option value="BCA">BCA</option>
-<option value="BBA">BBA</option>
-
+              <option value="">--Select Department--</option>
+              <option value="Agricultural Engineering">Agricultural Engineering</option>
+              <option value="Bio-Medical Engineering">Bio-Medical Engineering</option>
+              <option value="Civil Engineering">Civil Engineering</option>
+              <option value="Computer Science and Engineering (CSE)">Computer Science and Engineering (CSE)</option>
+              <option value="Computer Science & Technology (CST)">Computer Science & Technology (CST)</option>
+              <option value="Computer Science & Engineering – AI & ML">Computer Science & Engineering – AI & ML</option>
+              <option value="Electronics & Communication Engineering (ECE)">Electronics & Communication Engineering (ECE)</option>
+              <option value="Electrical Engineering (EE)">Electrical Engineering (EE)</option>
+              <option value="Information Technology (IT)">Information Technology (IT)</option>
+              <option value="Mechanical Engineering (ME)">Mechanical Engineering (ME)</option>
+              <option value="Bachelor of Business Administration (BBA)">Bachelor of Business Administration (BBA)</option>
+              <option value="Master of Business Administration (MBA)">Master of Business Administration (MBA)</option>
+              <option value="Bachelor of Computer Applications (BCA)">Bachelor of Computer Applications (BCA)</option>
+              <option value="Master of Computer Applications (MCA)">Master of Computer Applications (MCA)</option>
             </select>
           </div>
 
@@ -305,7 +308,7 @@
 
   <!-- Scripts -->
   <script src="{% static 'core/js/dash_board.js' %}?v=<?php echo time(); ?>"></script>
-<script>
+<scr>
     const examSetupUrl = "{% url 'exam_setup' %}";
     
     function loadExams() {
