--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -112,10 +112,7 @@
               <option value="Mechanical Engineering (ME)">Mechanical Engineering (ME)</option>
               <option value="Bachelor of Business Administration (BBA)">Bachelor of Business Administration (BBA)</option>
               <option value="Master of Business Administration (MBA)">Master of Business Administration (MBA)</option>
-              <option value="Bachelor of Computer Applications (BCA)">Bachelor of Computer Applications (BCA)</option>
-              <option value="Master of Computer Applications (MCA)">Master of Computer Applications (MCA)</option>
-            </select>
-          </div>
+              <option value="Bachelor of Computer Applications (BCA)">Bachelor of Compute
 
           <div class="form-group">
             <label>Select File:</label>
