--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -95,32 +95,35 @@
           </div>
         </div>
 
-        <div class="form-row">
-          <div class="form-group">
-            <label>Select Department:</label>
-            <select name="department" id="deptSelect" required>
-              <option value="">--Select Department--</option>
-              <option value="Agricultural Engineering">Agricultural Engineering</option>
-              <option value="Bio-Medical Engineering">Bio-Medical Engineering</option>
-              <option value="Civil Engineering">Civil Engineering</option>
-              <option value="Computer Science and Engineering (CSE)">Computer Science and Engineering (CSE)</option>
-              <option value="Computer Science & Technology (CST)">Computer Science & Technology (CST)</option>
-              <option value="Computer Science & Engineering – AI & ML">Computer Science & Engineering – AI & ML</option>
-              <option value="Electronics & Communication Engineering (ECE)">Electronics & Communication Engineering (ECE)</option>
-              <option value="Electrical Engineering (EE)">Electrical Engineering (EE)</option>
-              <option value="Information Technology (IT)">Information Technology (IT)</option>
-              <option value="Mechanical Engineering (ME)">Mechanical Engineering (ME)</option>
-              <option value="Bachelor of Business Administration (BBA)">Bachelor of Business Administration (BBA)</option>
-              <option value="Master of Business Administration (MBA)">Master of Business Administration (MBA)</option>
-              <option value="Bachelor of Computer Applications (BCA)">
-  Bachelor of Computer Applications (BCA)
-</option>
-</select>
-          <div class="form-group">
-            <label>Select File:</label>
-            <input type="file" name="file" id="fileInput" accept=".csv,.xlsx,.xls" required>
-          </div>
-        </div>
+      <div class="form-row">
+
+  <div class="form-group">
+    <label>Select Department:</label>
+    <select name="department" id="deptSelect" required>
+      <option value="">--Select Department--</option>
+      <option value="Agricultural Engineering">Agricultural Engineering</option>
+      <option value="Bio-Medical Engineering">Bio-Medical Engineering</option>
+      <option value="Civil Engineering">Civil Engineering</option>
+      <option value="Computer Science and Engineering (CSE)">Computer Science and Engineering (CSE)</option>
+      <option value="Computer Science & Technology (CST)">Computer Science & Technology (CST)</option>
+      <option value="Computer Science & Engineering – AI & ML">Computer Science & Engineering – AI & ML</option>
+      <option value="Electronics & Communication Engineering (ECE)">Electronics & Communication Engineering (ECE)</option>
+      <option value="Electrical Engineering (EE)">Electrical Engineering (EE)</option>
+      <option value="Information Technology (IT)">Information Technology (IT)</option>
+      <option value="Mechanical Engineering (ME)">Mechanical Engineering (ME)</option>
+      <option value="Bachelor of Business Administration (BBA)">Bachelor of Business Administration (BBA)</option>
+      <option value="Master of Business Administration (MBA)">Master of Business Administration (MBA)</option>
+      <option value="Bachelor of Computer Applications (BCA)">Bachelor of Computer Applications (BCA)</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label>Select File:</label>
+    <input type="file" name="file" id="fileInput" accept=".csv,.xlsx,.xls" required>
+  </div>
+
+</div>
+
 
         <button class="upload-btn" id="uploadBtn" disabled>Upload</button>
       </form>
