--- a/core/templates/core/exam_setup.html
+++ b/core/templates/core/exam_setup.html
@@ -59,20 +59,20 @@
 <div id="step2Content" style="display:none;">
     <p>Select Departments — choose one or more departments. After selecting a department you must add and complete at least one exam (Name, Code, Date, Session, Start Time, End Time) for that department before the "Proceed to Room Setup" button becomes active.</p>
     <div class="department-container">
-        <div class="department" data-name="Agricultural Engineering">Agricultural Engineering</div>
-        <div class="department" data-name="Bio-Medical Engineering">Bio-Medical Engineering</div>
-        <div class="department" data-name="Civil Engineering">Civil Engineering</div>
-        <div class="department" data-name="Computer Science and Engineering (CSE)">Computer Science and Engineering (CSE)</div>
-        <div class="department" data-name="Computer Science & Technology (CST)">Computer Science & Technology (CST)</div>
-        <div class="department" data-name="Computer Science & Engineering – AI & ML">Computer Science & Engineering – AI & ML</div>
-        <div class="department" data-name="Electronics & Communication Engineering (ECE)">Electronics & Communication Engineering (ECE)</div>
-        <div class="department" data-name="Electrical Engineering (EE)">Electrical Engineering (EE)</div>
-        <div class="department" data-name="Information Technology (IT)">Information Technology (IT)</div>
-        <div class="department" data-name="Mechanical Engineering (ME)">Mechanical Engineering (ME)</div>
-        <div class="department" data-name="Bachelor of Business Administration (BBA)">Bachelor of Business Administration (BBA)</div>
-        <div class="department" data-name="Master of Business Administration (MBA)">Master of Business Administration (MBA)</div>
-        <div class="department" data-name="Bachelor of Computer Applications (BCA)">Bachelor of Computer Applications (BCA)</div>
-        <div class="department" data-name="Master of Computer Applications (MCA)">Master of Computer Applications (MCA)</div>
+        <div class="department" data-name="AGE">AGE</div>
+        <div class="department" data-name=" BME">BME</div>
+        <div class="department" data-name="CE">CE</div>
+        <div class="department" data-name="CSE">CSE</div>
+        <div class="department" data-name="CST">CST</div>
+        <div class="department" data-name="CSE (AIML)">CSE (AIML)</div>
+        <div class="department" data-name="ECE">ECE</div>
+        <div class="department" data-name="EE">EE</div>
+        <div class="department" data-name="IT">IT</div>
+        <div class="department" data-name="ME">ME</div>
+        <div class="department" data-name="BBA">BBA</div>
+        <div class="department" data-name="MBA">MBA</div>
+        <div class="department" data-name="BCA">BCA</div>
+        <div class="department" data-name="MCA">MCA</div>
     </div>
     
     <div class="exams-container" id="examsContainer"></div>
