--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -265,7 +265,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="{% static 'core/js/dash_board.js' %}?v=3"></script>
+  <script src="{% static 'core/js/dash_board.js' %}?v=<?php echo time(); ?>"></script>
 <script>
     const examSetupUrl = "{% url 'exam_setup' %}";
     
